[gd_scene load_steps=16 format=2]

[ext_resource path="res://mobs/flying_slime.png" type="Texture" id=1]
[ext_resource path="res://mobs/components/fly_movement.tscn" type="PackedScene" id=2]
[ext_resource path="res://mobs/flying_slime.gd" type="Script" id=3]
[ext_resource path="res://mobs/components/component_manager.tscn" type="PackedScene" id=4]
[ext_resource path="res://mobs/slime.png" type="Texture" id=5]
[ext_resource path="res://mobs/components/attack_touch.tscn" type="PackedScene" id=6]
[ext_resource path="res://mobs/components/hurt_by_jump.tscn" type="PackedScene" id=7]
[ext_resource path="res://mobs/components/hurt_by_bullet.tscn" type="PackedScene" id=8]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 7 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 7 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 7 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 7 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 10.0
}, {
"frames": [ SubResource( 7 ) ],
"loop": true,
"name": "normal",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 3.5 )

[node name="FlyingSlime" type="KinematicBody2D"]
collision_layer = 64
collision_mask = 3
script = ExtResource( 3 )

[node name="EnemyComponentManager" parent="." instance=ExtResource( 4 )]
orb_amount = 20
knockback = 200
damage = 2
max_health = 2

[node name="AnimatedSprite" parent="EnemyComponentManager/SpriteHolder" index="0"]
position = Vector2( 0, 1.1 )
frames = SubResource( 6 )
frame = 3

[node name="FlyMovement" parent="EnemyComponentManager" instance=ExtResource( 2 )]
flip_animation_player_path = NodePath("../SpriteHolder/AnimatedSprite/FlipAnimationPlayer")
enemy_path = NodePath("../..")

[node name="HurtByJump" parent="EnemyComponentManager" instance=ExtResource( 7 )]
enemy_path = NodePath("../..")
hurt_area_path = NodePath("../HurtArea")

[node name="AttackTouch" parent="EnemyComponentManager" instance=ExtResource( 6 )]
enemy_path = NodePath("../..")
hit_area_path = NodePath("../HurtArea")
flying_enemy = true

[node name="HurtByBullet" parent="EnemyComponentManager" instance=ExtResource( 8 )]
enemy_path = NodePath("../..")
hurt_area_path = NodePath("../HurtArea")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 4, 3.5 )
shape = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[editable path="EnemyComponentManager"]
